统一版本信息-相关代码统一化